@@ -1,3 +1,9 @@
+ocsp-forwarder (0.5) stretch buster; urgency=medium
+
+  * also build for stretch 
+
+ -- Michael Loipfuehrer <michael.loipfuehrer@stusta.de>  Sun, 19 Aug 2019 20:35:28 +0200
+
 ocsp-forwarder (0.4) buster; urgency=medium
 
   * test for version bump 
